GRP-7055: GcPersistableHelper reflects over JDK class fields, throwing InaccessibleObjectException on Java 17